sqlite/conformance/sqlite-sqltests/snapshot_tests/tpch/snapshots/tpch__q22-global-sales-opportunity.snap
---
source: tpch.sqltest
expression: |-
  select
          cntrycode,
          count(*) as numcust,
          sum(c_acctbal) as totacctbal
      from
          (
              select
                  substr(c_phone, 1, 2) as cntrycode,
                  c_acctbal
              from
                  customer
              where
                  substr(c_phone, 1, 2) in
                      ('20', '14', '21', '28', '15', '24', '27')
                  and c_acctbal > (
                      select
                          avg(c_acctbal)
                      from
                          customer
                      where
                          c_acctbal > 0.00
                          and substr(c_phone, 1, 2) in
                              ('20', '14', '21', '28', '15', '24', '27')
                  )
                  and not exists (
                      select
                          *
                      from
                          orders
                      where
                          o_custkey = c_custkey
                  )
          ) as custsale
      group by
          cntrycode
      order by
          cntrycode;
info:
  statement_type: SELECT
  tables:
  - customer
  - orders
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN custsale
|  |--SCALAR SUBQUERY 1
|  |  `--SCAN customer
|  |--HASH JOIN orders
|  `--SCAN customer
`--USE SORTER FOR GROUP BY
