sqlite/conformance/sqlite-sqltests/snapshot_tests/tpch/snapshots/tpch__q3-shipping-priority.snap
---
source: tpch.sqltest
expression: |-
  select
          l_orderkey,
          sum(l_extendedprice * (1 - l_discount)) as revenue,
          o_orderdate,
          o_shippriority
      from
          customer,
          orders,
          lineitem
      where
          c_mktsegment = 'FURNITURE'
          and c_custkey = o_custkey
          and l_orderkey = o_orderkey
          and o_orderdate < '1995-03-29'
          and l_shipdate > '1995-03-29'
      group by
          l_orderkey,
          o_orderdate,
          o_shippriority
      order by
          revenue desc,
          o_orderdate
      limit 10;
info:
  statement_type: SELECT
  tables:
  - customer
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN orders
|--SEARCH customer USING INTEGER PRIMARY KEY (rowid=?)
|--SEARCH lineitem USING INDEX sqlite_autoindex_LINEITEM_1 (l_orderkey=?)
|--USE SORTER FOR GROUP BY
`--USE SORTER FOR ORDER BY
