sqlite/conformance/sqlite-sqltests/snapshot_tests/tpch/snapshots/tpch__q7-volume-shipping.snap
---
source: tpch.sqltest
expression: |-
  select
          supp_nation,
          cust_nation,
          l_year,
          sum(volume) as revenue
      from
          (
              select
                  n1.n_name as supp_nation,
                  n2.n_name as cust_nation,
                  substr(l_shipdate, 1, 4) as l_year,
                  l_extendedprice * (1 - l_discount) as volume
              from
                  supplier,
                  lineitem,
                  orders,
                  customer,
                  nation n1,
                  nation n2
              where
                  s_suppkey = l_suppkey
                  and o_orderkey = l_orderkey
                  and c_custkey = o_custkey
                  and s_nationkey = n1.n_nationkey
                  and c_nationkey = n2.n_nationkey
                  and (
                      (n1.n_name = 'ROMANIA' and n2.n_name = 'INDIA')
                      or (n1.n_name = 'INDIA' and n2.n_name = 'ROMANIA')
                  )
                  and l_shipdate between
                  '1995-01-01' and '1996-12-31'
          ) as shipping
      group by
          supp_nation,
          cust_nation,
          l_year
      order by
          supp_nation,
          cust_nation,
          l_year;
info:
  statement_type: SELECT
  tables:
  - supplier
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN shipping
|  |--MATERIALIZE hash build input for customer
|  |  |--HASH JOIN customer
|  |  `--SCAN nation AS n2
|  |--HASH JOIN orders
|  |--SEARCH lineitem USING INDEX sqlite_autoindex_LINEITEM_1 (l_orderkey=?)
|  |--SEARCH supplier USING INTEGER PRIMARY KEY (rowid=?)
|  |--SEARCH n1 USING INTEGER PRIMARY KEY (rowid=?)
|  `--SCAN nation AS n2
`--USE SORTER FOR GROUP BY
